# DMARRSS

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NIST_CSF_INTEGRATION_SUMMARY.md  README.md  TRANSFORMATION_SUMMARY.md  VERIFICATION.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  markmap.yml  mdbook.yml  pages.yml  release.yml
config/: README.md  dmarrss_config.yaml
data/: README_CSF.md
data/anomalies/: anomalies_20251208_172105.json  anomalies_20251208_173049.json
data/cache/: cve_cache.json
data/csf_reports/: csf_report_20251208_172105.json  csf_report_20251208_173049.json  executive_summary_20251208_172105.json  executive_summary_20251208_173049.json
data/findings/: findings_20251208_172131.json  findings_20251208_173047.json
data/inventory/: inventory_20251208_171822.json  inventory_20251208_172104.json  inventory_20251208_173046.json  inventory_20251208_173049.json
data/models/: manifest.json
data/processed/: README.md
data/raw/: README.md  sample_suricata_eve.json
data/reputation/: reputation.csv
data/state/: dmarrss.db
data/threat_intel/: last_update.txt  threat_matches_20251208_172104.json  threat_matches_20251208_173049.json
deploy/systemd/: dmarrss.service
docker/: Dockerfile
docs/: book.toml  phase-breakdown.md  roadmap.md
docs/src/: SUMMARY.md  api-reference.md  architecture.md  deployment.md  introduction.md  license-contact.md  roadmap.md
docs/theme/: custom.css
mermaid/: ci-sequence.mmd  flowchart.mmd
scripts/: README.md  demo.py  demo_cve_enrichment.py  generate-markmap.mjs  generate-mermaid.mjs
site/: index.html
src/: __init__.py  dmarrss_pipeline.py
src/dmarrss/: __init__.py  api.py  cli.py  daemon.py  schemas.py  store.py
src/dmarrss/actions/: __init__.py  base.py  block_ip.py  collect_artifacts.py  disable_account.py  isolate_host.py  notify_webhook.py  quarantine_network.py  terminate_process.py
src/dmarrss/csf/: __init__.py  anomaly_detector.py  asset_inventory.py  csf_reporting.py  recovery.py  security_baseline.py  threat_intel.py
src/dmarrss/decide/: __init__.py  decision_node.py
src/dmarrss/enrichment/: README.md  __init__.py  cve_enricher.py
src/dmarrss/models/: __init__.py  inference.py  neural.py  train.py
src/dmarrss/parsers/: __init__.py  snort.py  suricata.py  (+1 more)
src/models/: README.md  __init__.py  neural_processor.py  response_engine.py  threat_scorer.py
src/preprocessing/: README.md  __init__.py  log_parser.py
src/utils/: __init__.py  config.py
src/visualization/: README.md
tests/: __init__.py  test_actions.py  test_config.py  test_csf.py  test_cve_enricher.py  test_cve_scoring_integration.py  test_integration.py  test_parsers.py  test_parsing.py  test_scoring.py  test_threat_scorer.py
(+2 files in other folders)
